tests/should_fail/duplicate_specs.stderr
error: duplicate extern specification for std::vec::Vec::<T>::new
  --> duplicate_specs.rs:10:17
   |
10 |                 fn new() -> Vec<T>;
   |                 ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

